--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   # State Management
   get: ^4.5.5
   get_storage: ^2.1.1
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -77,11 +78,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/icons/brands
+    - assets/icons/brands/
     - assets/logos/
     - assets/images/on_boarding_images/
-    - assets/images/animations/
+    - assets/images/banners/
     - assets/icons/categories/
+    - assets/images/products/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
