--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_native_splash: ^2.3.2
   smooth_page_indicator: ^1.1.0
   carousel_slider: ^4.2.1
+  font_awesome_flutter: ^10.7.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -55,6 +56,7 @@ dependencies:
   get_storage: ^2.1.1
 
   connectivity_plus: any
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
