--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "C:/Users/sudip/OneDrive/Documents/FlutterProjects/flutter_e_commerce/linux"
+    "cmake.sourceDirectory": "C:/Users/sudip/OneDrive/Documents/FlutterProjects/flutter_e_commerce/linux",
+    "cmake.ignoreCMakeListsMissing": true
 }
