--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   connectivity_plus: any
   readmore: ^3.0.0
   flutter_rating_bar: ^4.0.1
+  firebase_core: ^3.1.0
   
 dev_dependencies:
   flutter_test:
