--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   readmore: ^3.0.0
   flutter_rating_bar: ^4.0.1
   firebase_core: ^3.1.0
+  flutter_native_splash: ^2.4.0
   
 dev_dependencies:
   flutter_test:
