--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   lottie: ^3.1.2
   firebase_auth: ^5.1.4
   cloud_firestore: ^5.2.1
+  google_sign_in: ^6.2.1
   
 dev_dependencies:
   flutter_test:
