--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ dependencies:
   cloud_firestore: ^5.2.1
   google_sign_in: ^6.2.1
   shimmer: ^3.0.0
+  image_picker: ^1.1.2
+  firebase_storage: ^12.1.3
+  cached_network_image: ^3.4.0
   
 dev_dependencies:
   flutter_test:
